--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.0.0-rc.11",
     "firebase": "^5.7.1",
+    "luxon": "^1.8.3",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.17",
     "vue-analytics": "^5.16.1",
+    "vue-datetime": "^1.0.0-beta.8",
     "vue-instagram": "^2.0.1",
     "vue-js-modal": "^1.3.28",
     "vue-router": "^3.0.1",
