--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "git:branch": "git rev-parse --abbrev-ref HEAD"
   },
   "dependencies": {
+    "avoriaz": "^6.3.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "firebase": "^5.7.1",
     "git-branch": "^2.0.1",
